--- a/FixITPagliu/app/src/main/res/layout/activity_login.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.auth.Login">
+    tools:context="com.example.fix_it_pagliuca.com.application.fix_it_pagliuca.user.auth.Login">
 
     <EditText
         android:layout_centerHorizontal="true"
