--- a/FixITPagliu/app/src/main/res/layout/activity_registration.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_registration.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.auth.Registration">
+    tools:context="com.example.fix_it_pagliuca.com.application.fix_it_pagliuca.user.auth.Registration">
 
 
 
