--- a/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
+++ b/FixITPagliu/app/src/main/res/layout/activity_user_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".user.UserMenu"
+    tools:context="com.example.fix_it_pagliuca.com.application.fix_it_pagliuca.user.dashboard.Dashboard"
     tools:openDrawer="start">
 
     <com.google.android.material.navigation.NavigationView
